# integration-verify-github-action

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTAINER_DOCS.md  Dockerfile  LICENSE  README.md  action.yaml  input_output_helpers.py  output_helper.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  tox.ini  verify-wrapper.py  verify.py  verify.sh
.github/: dependabot.yml
.github/workflows/: check-docker-image-is-used.yml  docker-publish.yml  main.yml  test.yml
assess-verify/: README.md  action.yaml  requirements.txt  verify.py
contrastverify/: __init__.py  verify.py
contrastverify/helpers/: input_output_helpers.py
tests/: test_action.py  test_input_helper.py  test_verify.py
tests/fixtures/: missingbasicattributes.pem  selfsigned.pem
