[project]
name = "contrast-verify-action"
version = "1.0.0"
description = "GitHub Action to verify an application by determining whether the application violates a job outcome policy or threshold of open vulnerabilities from Contrast Security"
authors = [
    {name = "Josh Anderson", email = "josh.anderson@contrastsecurity.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests",
    "actions-toolkit",
    "certifi",
    "cryptography",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "responses",
    "pre-commit",
    "bump2version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contrastverify"]
